2012-07-19:
  - Seperated out the infrastructure of 'item' and 'data.set' classes into another
    package called 'codebooks'.
  - Improvements of genTable and aggregate.formula: Some aggregations should
    be quicker because of internal use of the Table2 and percent2 functions.
  - Improvement of mtable: LaTeX output of model tables where each model consumes
    only one column is more compact.

2012-02-14:
  - Replaced calls to .Internal(sample()) by calls to sample.int() and eliminated
    call to .Internal(int.unzip()). The package now depends on R >= 2.9.0

2012-01-25:
  - Fixed reading of value labels from SPSS system files - no garbage at the end of the labels.

2011-12-07:
  - Fixed "getSummary" and "getSummary.expcoef" S3-generic functions.

2011-11-06:
  - Added a 'rep' method for 'item.vector' objects.
  - Applied patch sent by Masahiro Hayashi <rinm884@gmail.com> to fix bugs
    in 'vector' method of 'recode'.

2011-10-05:
  - Adapted the package to R 2.14.0 (by eliminating calls to 'require'
    in the '.onLoad' function)
  - Changed the methods for data frames, 'data.set' and 'importer' objects
    of the function 'sort' from S3 to S4

2011-08-26:
  - Fixed a bug in internal function 'compress.storage.mode.double' that caused
    it to create NA's where it should not.
  - Fixed a bug in the print method for items that caused it to report their length
    incorrectly

2011-08-15:
  - Made internal functions of 'spss.fixed.file' robuster against syntax errors
    in the spss-controls files (codes.file, labels.file, etc.)

2011-06-17:
  - Removed mkHelpDir() that has not worked for a while because of architectural
    changes in R.
  - Removed some unused variables from the C-code that caused warnings.
  - Corrected a bug in format.mtable() misusing the function character()
    and some other buglets reported by NOTE's in automatic runs by CRAN.

2011-05-29:
  - Applied patch sent by Christopher N. Lawrence, Ph.D. <c.n.lawrence@gmail.com>: