@@ -29,7 +29,7 @@ to.data.frame(X,as.vars=1,name="Freq")
 }
 
 \examples{
-berkeley <- aggregate(Table(Admit,Freq)~.,data=UCBAdmissions)
+berkeley <- Aggregate(Table(Admit,Freq)~.,data=UCBAdmissions)
 berktest1 <- By(~Dept+Gender,
                 glm(cbind(Admitted,Rejected)~1,family="binomial"),
                 data=berkeley)
